# mini-vga-driver

./: .gitignore  CMakeLists.txt  README.md  debug.sh
boot/: CMakeLists.txt  boot.asm  kernel_entry.asm  linker.ld
src/: CMakeLists.txt  frame_data.h  kernel.c  vga.c  vga.h
